k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airec
  labels:
    app.kubernetes.io/managed-by: kustomize
